[package]
name = "lsm-forest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "2.0.0-rc.1"
bloomfilter = { version = "1.0.12", features = ["serde"] }
crc32fast = "1.3.2"
rand = "0.8.5"

[lib]
doctest = false
